Implemented the all clear button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="calculator">
       <div class="display">
         <div class="user-input">0</div>
-        <div class="result">100</div>
+        <div class="result"></div>
       </div>
       <div class="buttons">
         <button class="all-clear" id="all-clear">AC</button>
