Added styling to the calculator

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <div class="container">
     <div class="calculator">
       <div class="display">
-        <div class="user-input">0</div>
-        <div class="result"></div>
+        <div class="calculator-display">
+          <div class="user-input">0</div>
+          <div class="result"></div>
+        </div>
       </div>
       <div class="buttons">
         <button class="all-clear" id="all-clear">AC</button>
