Added extra styling to the calculator
Implemented hover and click animation with the buttons
Fixed the empty space in the display

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="display">
         <div class="calculator-display">
           <div class="user-input">0</div>
-          <div class="result"></div>
+          <div class="result">&nbsp;</div>
         </div>
       </div>
       <div class="buttons">
